[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyde_audit"
version = "0.1.0"
description = "A package that uses HyDE to answer questions on higher education financial statement audits"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "HyDE Audit Team", email = "example@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "boto3>=1.28.0",
    "langchain>=0.0.267",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.2"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/hyde-audit"
"Bug Tracker" = "https://github.com/yourusername/hyde-audit/issues" 